--- a/.gitignore
+++ b/.gitignore
@@ -121,4 +121,15 @@ dmypy.json
 ### Python Patch ###
 .venv/
 
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+
 # End of https://www.gitignore.io/api/python
